fix menu-item text overflow style

--- a/packages/theme-default/src/menu.css
+++ b/packages/theme-default/src/menu.css
@@ -11,6 +11,7 @@
   position: relative;
   transition: border-color .3s, background-color .3s, color .3s;
   box-sizing: border-box;
+  white-space: nowrap;
 }
 
 @component-namespace el {
@@ -74,9 +75,8 @@
           padding: 5px 0;
           background-color: #fff;
           z-index: 1;
-          width: 100%;
+          min-width: 100%;
           box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.12), 0px 0px 6px 0px rgba(0,0,0,0.04);
-
         }
 
         & .el-submenu__title {
